<resources>
    <string name="app_name">COMP3074_GroupProject_Bestulator</string>
    <string name="fourth_activity">Projects</string>
    <string name="create_project">Create Project</string>
    <string name="create_new_project">Create New Project</string>
    <string name="project_name">Project Name</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="client_name">Client Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="category">Category</string>
    <string name="budget">Budget</string>
    <string name="create">Create</string>
    <string name="project_list">Project List</string>
    <string name="home_page">Home Page</string>
    <string name="dashboard">Dashboard</string>
    <string name="project_deadlines">Project Deadlines</string>
    <string name="view_projects">View Projects</string>
    <string-array name="project_categories">
        <item>Construction</item>
        <item>Renovation</item>
        <item>Design</item>
        <item>Maintenance</item>
    </string-array>
</resources>