<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_third_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThirdActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:title="@string/create_project"

        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginBottom="13dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/create_new_project" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:width="350dp"
        android:layout_marginStart="25dp"
        android:inputType="text"
        android:text="@string/project_name"
        android:hint="@string/project_name"/>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:width="350dp"
        android:layout_marginStart="25dp"
        android:inputType="text"
        android:text="@string/city"
        android:hint="@string/city"/>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:width="350dp"
        android:layout_marginStart="25dp"
        android:inputType="text"
        android:text="@string/state"
        android:hint="@string/state"/>

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:width="350dp"
        android:layout_marginStart="25dp"
        android:inputType="text"
        android:text="@string/client_name"
        android:hint="@string/client_name"/>

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:width="350dp"
        android:layout_marginStart="25dp"
        android:inputType="text"
        android:text="@string/phone"
        android:hint="@string/phone"/>

    <EditText
        android:id="@+id/editText8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:width="350dp"
        android:layout_marginStart="25dp"
        android:inputType="text"
        android:text="@string/email"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/editText9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:width="350dp"
        android:layout_marginStart="25dp"
        android:inputType="text"
        android:text="@string/start_date"
        android:hint="@string/start_date"/>

    <EditText
        android:id="@+id/editText10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:width="350dp"
        android:layout_marginStart="25dp"
        android:inputType="text"
        android:text="@string/end_date"
        android:hint="@string/end_date"/>

    <TextView
        android:id="@+id/editText11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:text="@string/category"
        android:textSize="14sp" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:width="350dp"
        android:layout_marginStart="25dp"
        android:inputType="text"
        android:text="@string/budget"
        android:hint="@string/budget"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text="@string/create" />

</LinearLayout>